# sketchup-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  .rubocop.yml  AGENTS.md  CLAUDE.md  CLAUDE_COGNITIVE_ARCHITECTURE.md  CONTRIBUTING.md  DIAGNOSTICO_EXTRACT.md  EXTERNAL_VALIDATION_REPORT.md  Gemfile.lint  HISTORICO_SOFA.json  Makefile  OVERVIEW.md  PROMPT-FELIPE.md  PROMPT-RENAN.md  PROMPT_GPT_external_validation.md  README.md  analyze_overpoly.py  crop_legend.py  docker-compose.rag.yml  docker-compose.yml  main.py  make_side.py  make_test_pdf.py  merge_corrigido.py  merge_corrigido_v2.py  peek_pdf.py  preprocess_walls.py  proto_colored.py  proto_red.py  proto_runner.py  proto_skel.py  pyproject.toml  render_debug.py  render_native.py  render_proto_overlays.py  render_semantic.py  render_sidebyside.py  (+8 more)
.ai_bridge/: CURRENT_STATE.md  DECISIONS.md  GPT_REQUESTS.md  GPT_RESPONSES.md  HANDOFF.md  LESSONS.md  PROJECT_CONTEXT.md  QUESTIONS_FOR_NEXT_AGENT.md  README.md  ROOM_CYCLE_PLAN.md  SESSION_COORDINATION.md  STUDIO_BACKLOG.md  STUDIO_HANDOFF.md  TODO_NEXT.md  events.jsonl
.claude/: CLAUDE.md  README.md  constitution.md  settings.json
api/: app.py
classify/: __init__.py  service.py
cockpit/: __init__.py  app.py  history_view.py  overrides.py  project_status.py  proposed_actions.py  render_overlay.py  thumbnails.py
config/: assumptions.yaml
configs/: sofa_archetypes.json  sofa_eval_cases.json  sofa_schema.json  sofa_vray_material_spec.json
core/: scale.py
dashboard/: __main__.py  _check_graph.py  build_3d.py  consolidate_walls.py  detect_windows_svg.py  export_ifc.py  export_obj.py  extract_metrics.py  furniture_coords.py  fuse_detections.py  map_openings_to_walls.py  render_logical_walls.py  render_topview.py  room_graph.py  server.py  svg_native_parse.py  test_consensus_invariants.py
debug/: __init__.py  overlay.py  service.py
docs/: AGENT_COORDINATION.md  ANALYSIS-OVERVIEW.md  ANALYSIS.md  ANTI_FORGETTING.md  ARTIFACT_POLICY.md  CROSS-PDF-VALIDATION.md  DEDUP-AUDIT.md  DOCS-CONSOLIDATION-TODO.md  FINAL-STATUS.md  GATES.md  HANDOFF.md  OPENINGS-REFINEMENT.md  ORPHAN-RESIDUAL-AUDIT.md  PROJECT_STATE.md  PROMPT-NEXT-CLAUDE.md  PR_HYGIENE.md  REPO_HYGIENE.md  ROADMAP.md  SCHEMA-COHERENCE-REPORT.md  SCHEMA-V2.md  SOFA_CLASS_SPEC.md  SOFA_EVAL_GATE.md  SOFA_FAMILIES.md  SOFA_GPT_REVIEW_LOOP.md  SOFA_LEARNING_LOG.md  SOFA_SKILL.md  SOFA_VRAY_TRACK.md  SOLUTION-FINAL.md  SOLUTION.md  SVG-INGEST-INTEGRATION.md  VALIDATION-F1-REPORT.md  git_workflow.md  ground_truth_references.md  ground_truth_v1.md  openings_vector_v0.md  operational_roadmap.md  performance_baseline.md  pipeline_overview.md  png_history_protocol.md  repo_hardening_plan.md  (+4 more)
extract/: __init__.py  service.py
ground_truth/: planta_74_micro.json
ingest/: __init__.py  service.py  svg_service.py
interior/: __init__.py
model/: __init__.py  builder.py  pipeline.py  types.py
openings/: pruning.py  service.py
patches/: 01-kmeans-color-aware.py  02-density-trigger.py  03-quality-score.py  04-roi-fallback-explicit.py  06-arc-detection-openings.py  07-reconnect-fragments-FIXED.py  09-afplan-convex-hull.py  README.md
peitoris/: __init__.py  service.py
preprocess/: __init__.py  color_mask.py  skeleton.py
references/: README.md
renderers/: __init__.py  debug.py  native.py  proto_overlays.py  semantic.py  with_openings.py
reports/: .gitignore  README.md  perf_baseline.example.json  repo_hygiene_report.md
roi/: service.py
schemas/: correction_finding.schema.json  curadoria_verdict.schema.json  decision_audit_record.schema.json  design_spec_bundle.schema.json  judged_variant.schema.json  rag_writeback_record.schema.json  visual_findings.schema.json
scripts/: README.md  annotate_openings_helper.py  audit_openings.py  audit_openings_report.py  build_sofa_3seat_v1.rb  build_sofa_eval_suite.rb  build_sofa_from_config.rb  cockpit_make_demo_pdf_underlay.py  compare_oracle.py  generalization_gate.py  generate_f1_dashboard.py  generate_synthetic_plans.py  make_gpt_review_sheet.py  plot_openings_comparison.py  plot_openings_progression.py  project_state_check.py  render_change_comparison.py  render_f1_diff_png.py  render_openings_conclusion_png.py  render_validation_summary_png.py  run_cubicasa_oracle.py  score_openings.py  set_clipboard_image.ps1  sofa_components.rb  sofa_fabric_material.py  sofa_generator.rb  sofa_primitives.rb  sofa_vray_render.rb  validate_multiplant.py
sketchup_mcp_server/: __init__.py  server.py  tools.py
skp_export/: GEOMETRY_FIX_REPORT.md  README.md  SKETCHUP_GENERATOR_GUIDE.md  __init__.py  __main__.py  apply_openings.rb  bridge.py  build_floors.rb  consume_consensus.rb  consume_consensus_dryrun.py  dump_wall_coords.rb  headless_consume_and_quit.rb  main.rb  place_door_component.rb  rebuild_walls.rb  run_full_pipeline.ps1  screenshot_consensus.rb  template_work.skp  validate.rb  validator.py
tests/: fixtures.py  test_annotate_helpers.py  test_appearance_non_blocking.py  test_apply_overrides.py  test_apply_overrides_polygon.py  test_architect_program.py  test_armchair_class.py  test_ask_gpt_gate.py  test_aspect_filter.py  test_assumptions_loader.py  test_audit_soft_barriers.py  test_auditor.py  test_auto_decider.py  test_auto_decider_gate.py  test_auto_gpt_consult_wiring.py  test_bed_class.py  test_bed_placement_gate.py  test_bedroom_layout.py  test_build_geometry_invariants_report.py  test_build_plan_shell.py  test_build_plan_shell_runner_mode.py  test_build_promote_hook.py  test_builder_constants_env.py  (+214 more)
(+1162 files in other folders)
