[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sketchup-mcp"
version = "0.2.0"
description = "Minimal PDF floor-plan -> SketchUp .skp pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Felipe (GFCDOTA)" }]
keywords = ["sketchup", "floor-plan", "pdf"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
]

dependencies = [
  "shapely>=2.0,<3.0",
  "pypdfium2>=4.30,<5.0",
  "Pillow>=10.0,<12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.6,<1.0",
]

[project.urls]
Repository = "https://github.com/GFCDOTA/sketchup-mcp"

[tool.setuptools.packages.find]
include = ["tools*"]
exclude = ["tests*", "runs*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "venv", "runs", "__pycache__", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F811"]
